# PX4-Autopilot

src/modules/mc_lqr_control/: CMakeLists.txt  LQRControl.cpp  LQRControl.hpp
